2014-02-26  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/tri_ccqp_smacof_nofold_sph_pip.m: (0.1.0)

	- TRI_CCQP_SMACOF_NOFOLD_SPH_PIP Constraints in PIP format for
	CCQP-SMACOF to ensure that 2D triangules on the sphere preserve
	positive orientation.

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.2.0)

	- Extend so that it can deal with 3D outputs as well as 2D.

	* matlab/test/test_cons_smacof_pip.m: (0.2.0)

	- Add tests for the sphere problem.

	* matlab/ManifoldToolbox/tri_qcqp_smacof_nofold_2d_pip.m: (0.1.1)

	- Small change. Remove unused computation of weights matrix.

2014-02-25  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/PointsToolbox/cons_smacof_pip.m: (0.0.1)
	* Add matlab/test/test_cons_smacof_pip.m: (0.0.1)

	- CONS_SMACOF_PIP SMACOF MACOF algorithm with polynomial
	constraints (PIP file format).

	* Add matlab/ManifoldToolbox/tri_qcqp_smacof_nofold_2d_pip.m:
	(0.0.1)
	* Add matlab/test/test_tri_qcqp_smacof_nofold_2d_pip.m: (0.0.1)

	- TRI_QCQP_SMACOF_NOFOLD_2D_PIP Constraints in PIP format for
	QCQP-SMACOF to ensure that 2D triangules preserve positive
	orientation.

2014-02-24  Ramon Casero  <rcasero@gmail.com>

	* matlab/add_gerardus_paths.m: (0.3.0)

	- Add gerardus/programs to the system path in Matlab. This way,
	binaries/executables can be found by functions system() or !.

2014-02-24  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/tri_qcqp_smacof_nofold_2d.m: (0.0.2)

	- I had forgotten to check for AMIN type.

	* matlab/test/test_qcqp_smacof.m: (0.0.3)

	- Fix bug. Missing input argument in call to function, and missing
	the definition of algorithm parameters for QCQP-SMACOF and SCIP.

2014-02-15  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.9.0)

	- Add section to download the source code of ITK 3.4.1 and build
	it. This will make users' life easier. The user still has to
	manually install with "sudo make install".

	- Fix bug: ./configure for GMP and MPFR has to be told to use