@@ -2,7 +2,7 @@
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2014 University of Oxford
-% Version: 0.0.2
+% Version: 0.2.1
 % $Rev$
 % $Date$
 %
@@ -419,6 +419,96 @@ scip_opts.display_verblevel = 0;
 % solve MDS problem with constrained SMACOF
 [y, stopCondition, sigma, t] ...
     = cons_smacof_pip(dtot, y0, bnd, [], con, ...
+    smacof_opts, scip_opts);
+
+sum(y.^2, 2)'
+
+% check that this is a valid solution
+vol = zeros(size(tri, 1), 1);
+for I = 1:size(tri, 1)
+    vol(I) = det(y(tri(I, :), :))/6;
+end
+if (all(vol >= 0))
+    disp('Valid solution')
+else
+    error('Invalid solution')
+end
+
+% plot points
+subplot(2, 1, 1)
+hold off
+trisurf(tri, y(:, 1), y(:, 2), y(:, 3))
+axis equal
+
+% plot points
+subplot(2, 1, 2)
+hold off
+trisurf(tri, y0(:, 1), y0(:, 2), y0(:, 3))
+axis equal
+
+stopCondition
+
+% plot stress evolution
+subplot(2, 1, 2)
+plot(t, sigma)
+xlabel('Time (sec)')
+ylabel('stress')
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% New toy example for the sphere, where the MDS solution produces 
+%% fold-over, and the CCQP-SMACOF removes the fold-over
+
+rng(0)
+
+% uniform sampling of the sphere
+[x, tri] = ParticleSampleSphere('N', 20);
+
+% create some overlaps
+x(1:5, :) = rand(5, 3);
+x(1:5, :) = x(1:5, :) ./ repmat(sqrt(sum(x(1:5, :).^2, 2)), 1, 3);
+
+% plot mesh
+hold off
+trisurf(tri, x(:, 1), x(:, 2), x(:, 3))
+axis equal
+view(154, -8)
+
+% compute distance matrix of the mesh with the fold-overs
+dtot = dmatrix(x');
+
+% check that the MDS solution gives the fold-overs
+aux = cmdscale(dtot);
+
+% plot mesh
+hold off
+trisurf(tri, aux(:, 1), aux(:, 2), aux(:, 3))
+axis equal
+view(-96, -16)
+
+% constraints and bounds parameters
+vmin = .05;
+vmax = .15;
+R = 1;
+
+% recompute bounds and constraints for the spherical problem
+[con, bnd] = tri_ccqp_smacof_nofold_sph_pip(tri, R, vmin, vmax);
+
+% SMACOF algorithm parameters
+clear smacof_opts
+smacof_opts.MaxIter = 10;
+smacof_opts.Epsilon = 1e-2;
+smacof_opts.Display = 'iter';
+smacof_opts.TolFun = 1e-6;
+
+% SCIP algorithm parameters
+clear scip_opts
+% scip_opts.limits_time = 100;
+scip_opts.limits_solutions = 1;
+scip_opts.display_verblevel = 0;
+
+% solve MDS problem with constrained SMACOF
+[y, stopCondition, sigma, t] ...
+    = cons_smacof_pip(dtot, aux, bnd, [], con, ...
     smacof_opts, scip_opts);
 
 sum(y.^2, 2)'
